<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/idTextViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/goblin_one"
        android:text="@string/strWelcome"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/idTextViewInfo"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/strInfo"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idTextViewWelcome">
    </TextView>

    <TextView
        android:id="@+id/idTextViewAuthors"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/strAuthors"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idTextViewInfo">
    </TextView>

    <com.google.android.material.chip.Chip
        android:id="@+id/idChip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strChip1"
        app:chipIcon="@drawable/ic_baseline_info_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idTextViewAuthors"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/idChip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strChip2"
        app:chipIcon="@drawable/ic_baseline_info_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idChip1"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/idChip3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strChip3"

        app:chipIcon="@drawable/ic_baseline_info_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idChip2"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/idChip4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strChip4"
        app:chipIcon="@drawable/ic_baseline_info_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idChip3"/>

</androidx.constraintlayout.widget.ConstraintLayout>